--- a/client/src/components/HotelDisplay/singleHotel/Hotel.css
+++ b/client/src/components/HotelDisplay/singleHotel/Hotel.css
@@ -7,6 +7,7 @@
     justify-content: center;
     flex-wrap: wrap;
     cursor: pointer;
+    border: 1px solid black;
 }
 
 .Hinfo{
